Data/Logs/log-2020-07-24.txt


=============================================================
Время: 2020-07-24 10:43:42.466246

Ошибка:
Traceback (most recent call last):
  File "C:\Users\ProstoChelovek\AppData\Local\Programs\Python\Python38-32\lib\site-packages\discord\ext\commands\bot.py", line 596, in _load_from_module_spec
    spec.loader.exec_module(lib)
  File "<frozen importlib._bootstrap_external>", line 783, in exec_module
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "E:\PyProg\ProstoTools(Original version)\Cogs\different.py", line 12, in <module>
    from Tools.database import DB
  File "E:\PyProg\ProstoTools(Original version)\Tools\database.py", line 40
    'lvl': int(data[2]),
    ^
SyntaxError: invalid syntax

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "bot.py", line 75, in <module>
    client.load_extension(f'Cogs.{filename[:-3]}')
  File "C:\Users\ProstoChelovek\AppData\Local\Programs\Python\Python38-32\lib\site-packages\discord\ext\commands\bot.py", line 653, in load_extension
    self._load_from_module_spec(spec, name)
  File "C:\Users\ProstoChelovek\AppData\Local\Programs\Python\Python38-32\lib\site-packages\discord\ext\commands\bot.py", line 599, in _load_from_module_spec
    raise errors.ExtensionFailed(key, e) from e
discord.ext.commands.errors.ExtensionFailed: Extension 'Cogs.different' raised an error: SyntaxError: invalid syntax (database.py, line 40)

=============================================================

=============================================================
Время: 2020-07-24 10:43:42.725610

Ошибка:
Traceback (most recent call last):
  File "C:\Users\ProstoChelovek\AppData\Local\Programs\Python\Python38-32\lib\site-packages\discord\ext\commands\bot.py", line 596, in _load_from_module_spec
    spec.loader.exec_module(lib)
  File "<frozen importlib._bootstrap_external>", line 783, in exec_module
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "E:\PyProg\ProstoTools(Original version)\Cogs\events.py", line 17, in <module>
    from Tools.database import DB
  File "E:\PyProg\ProstoTools(Original version)\Tools\database.py", line 40
    'lvl': int(data[2]),
    ^
SyntaxError: invalid syntax

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "bot.py", line 75, in <module>
    client.load_extension(f'Cogs.{filename[:-3]}')
  File "C:\Users\ProstoChelovek\AppData\Local\Programs\Python\Python38-32\lib\site-packages\discord\ext\commands\bot.py", line 653, in load_extension
    self._load_from_module_spec(spec, name)
  File "C:\Users\ProstoChelovek\AppData\Local\Programs\Python\Python38-32\lib\site-packages\discord\ext\commands\bot.py", line 599, in _load_from_module_spec
    raise errors.ExtensionFailed(key, e) from e
discord.ext.commands.errors.ExtensionFailed: Extension 'Cogs.events' raised an error: SyntaxError: invalid syntax (database.py, line 40)

=============================================================

=============================================================
Время: 2020-07-24 12:57:06.051593

Ошибка:
Command "send-user" is not found
=============================================================

=============================================================
Время: 2020-07-24 12:58:12.734102

Ошибка:
Command "send-user" is not found
=============================================================

=============================================================
Время: 2020-07-24 12:59:12.885245

Ошибка:
Command "send-user" is not found
=============================================================

=============================================================
Время: 2020-07-24 12:59:46.130614

Ошибка:
Command "send-user" is not found
=============================================================

=============================================================
Время: 2020-07-24 13:00:19.859416

Ошибка:
Command "send-user" is not found
=============================================================

=============================================================
Время: 2020-07-24 13:00:56.862445

Ошибка:
arg is a required argument that is missing.
=============================================================

=============================================================
Время: 2020-07-24 13:46:39.649863

Ошибка:
Command raised an exception: KeyError: 'level'
=============================================================

=============================================================
Время: 2020-07-24 13:47:17.938972

Ошибка:
Command raised an exception: KeyError: 'level'
=============================================================

=============================================================
Время: 2020-07-24 15:05:16.811208

Ошибка:
Command raised an exception: ProgrammingError: 1064 (42000): You have an error in your SQL syntax; check the manual that corresponds to your MySQL server version for the right syntax to use near 'WHERE user_id = 660110922865704980 AND guild_id = 717776571406090310' at line 1
=============================================================

=============================================================
Время: 2020-07-24 15:08:18.553032

Ошибка:
Command raised an exception: DataError: 1292 (22007): Truncated incorrect DOUBLE value: '["sim", "tel", "gloves"]'
=============================================================

=============================================================
Время: 2020-07-24 20:57:33.592509

Ошибка:
Traceback (most recent call last):
  File "C:\Users\ProstoChelovek\AppData\Local\Programs\Python\Python38-32\lib\site-packages\discord\ext\commands\bot.py", line 608, in _load_from_module_spec
    setup(self)
  File "E:\PyProg\ProstoTools(Original version)\Cogs\events.py", line 404, in setup
    client.add_cog(Events(client))
  File "E:\PyProg\ProstoTools(Original version)\Cogs\events.py", line 54, in __init__
    self.conn = mysql.connector.connect(user = 'root', password = '9fr8-PkM;M4+', host = 'localhost', database = 'data')
NameError: name 'mysql' is not defined

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "bot.py", line 75, in <module>
    client.load_extension(f'Cogs.{filename[:-3]}')
  File "C:\Users\ProstoChelovek\AppData\Local\Programs\Python\Python38-32\lib\site-packages\discord\ext\commands\bot.py", line 653, in load_extension
    self._load_from_module_spec(spec, name)
  File "C:\Users\ProstoChelovek\AppData\Local\Programs\Python\Python38-32\lib\site-packages\discord\ext\commands\bot.py", line 613, in _load_from_module_spec
    raise errors.ExtensionFailed(key, e) from e
discord.ext.commands.errors.ExtensionFailed: Extension 'Cogs.events' raised an error: NameError: name 'mysql' is not defined

=============================================================